# AskVault

./: .gitignore  README.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  schema.prisma  test.py
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt  start.sh
backend/lib/: agents.py  config.py  redis_history.py  vector_db.py
backend/routes/: file_routes.py  user_routes.py
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/chat/: page.tsx
frontend/app/dashboard/drive/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: app-sidebar.tsx
frontend/lib/: axios.ts
lib/: agents.py  config.py  llm_handler.py  vector_db.py
middleware/: auth.py
models/: request.py
prisma/: schema.prisma
routes/: file_routes.py  user_routes.py
