[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.130.0",
    "fastapi[standard]>=0.115.13",
    "huggingface-hub>=0.33.0",
    "langchain>=0.3.25",
    "langchain-huggingface>=0.3.0",
    "langchain-text-splitters>=0.3.8",
    "langchain-unstructured>=0.1.5",
    "langgraph>=0.4.8",
    "passlib>=1.7.4",
    "prisma>=0.15.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "sentence-transformers>=4.1.0",
    "unstructured[pdf]>=0.17.2",
    "unstructured-client>=0.25.9",
    "uvicorn>=0.34.3",
    "qdrant-client>=1.14.3",
    "langchain-community>=0.3.25",
    "langchain-qdrant>=0.2.0",
    "pipreqs>=0.5.0",
    "redis>=6.2.0",
    "google-generativeai>=0.8.5",
    "tesseract>=0.1.3",
]

[dependency-groups]
dev = []

[tool.setuptools]
packages = ["lib", "models", "routes", "middleware"]

